log
Sat 18 May 2024 03:39:04 PM UTC: 
 tests:  0|5
total_score: 0/70
211a860
Sat 18 May 2024 03:43:42 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++------------
 1 file changed, 26 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:36: error: expected ‘]’ before ‘;’ token
   63 |                   arr[n->sudo[i][k];
      |                                    ^
      |                                    ]
sudoku.c:63:22: error: statement with no effect [-Werror=unused-value]
   63 |                   arr[n->sudo[i][k];
      |                   ~~~^~~~~~~~~~~~~~~
   64 |                 }
      |                 ~     
sudoku.c:63:37: error: expected ‘;’ before ‘}’ token
   63 |                   arr[n->sudo[i][k];
      |                                     ^
      |                                     ;
   64 |                 }
      |                 ~                    
cc1: all warnings being treated as errors
Compilation failed
083d3f5
Sat 18 May 2024 03:43:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:22: error: statement with no effect [-Werror=unused-value]
   63 |                   arr[n->sudo[i][k]];
      |                   ~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90a0ec4
Sat 18 May 2024 03:44:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
07244f7
Sat 18 May 2024 03:53:11 PM UTC: 
 sudoku.c | 26 ++++++--------------------
 1 file changed, 6 insertions(+), 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:46:24: error: unused variable ‘submatrices’ [-Werror=unused-variable]
   46 |   int filas, columnas, submatrices;
      |                        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
951bda2
Sat 18 May 2024 03:53:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d62a5e0
Sat 18 May 2024 03:54:25 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
ebb28f4
Sat 18 May 2024 04:10:52 PM UTC: 
 sudoku.c | 53 +++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 47 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
f0c47d6
Sat 18 May 2024 04:23:50 PM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++----------------
 1 file changed, 30 insertions(+), 16 deletions(-)
 tests:  5|3
total_score: 35/70
3da5400
Sat 18 May 2024 04:29:16 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++++++----------
 1 file changed, 27 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodesIsValid’:
sudoku.c:128:42: error: passing argument 1 of ‘is_valid’ makes pointer from integer without a cast [-Werror=int-conversion]
  128 |             if (is_valid(adj->sudo[filas][columnas]))
      |                          ~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                          |
      |                                          int
sudoku.c:46:20: note: expected ‘Node *’ but argument is of type ‘int’
   46 | int is_valid(Node *n) {
      |              ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
412c0f3
Sat 18 May 2024 04:29:27 PM UTC: 
 sudoku.c | 21 ---------------------
 1 file changed, 21 deletions(-)
 tests:  5|3
total_score: 35/70
9aebe42
Sat 18 May 2024 04:30:01 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
793fc23
Sat 18 May 2024 04:31:50 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:105:30: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  105 |             Node *nuevoadj = adj->sudo[filas][columnas] = i + 1;
      |                              ^~~
cc1: all warnings being treated as errors
Compilation failed
b016f9a
Sat 18 May 2024 04:32:51 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
6c0ed7c
Sat 18 May 2024 04:36:58 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
8919c7a
Sat 18 May 2024 04:37:37 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  5|3
total_score: 35/70
ec0e9d4
Sat 18 May 2024 04:38:58 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
85287d3
Sat 18 May 2024 04:44:30 PM UTC: 
 sudoku.c | 34 +++++++++++++++++++++++++---------
 1 file changed, 25 insertions(+), 9 deletions(-)
 tests:  0|0
fcb959d
Sat 18 May 2024 04:49:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f6f26e9
Sat 18 May 2024 04:50:07 PM UTC: 
 sudoku.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  6|2
total_score: 45/70
fb39484
